Removed unused startup parameters