@@ -17,9 +17,6 @@ javafx {
 
 application {
     mainClass.set("ru.isma.next.app.launcher.LauncherKt")
-    applicationDefaultJvmArgs = listOf(
-        "--add-opens=javafx.controls/javafx.scene.control=ALL-UNNAMED",
-        "--add-opens=javafx.graphics/javafx.scene=ALL-UNNAMED")
 }
 
 val koinVersion = "3.1.2"
